Correct Render service name to match repo

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: student-test-app
+    name: name: flask-test-portal
     runtime: python
     buildCommand: |
       python -m pip install --upgrade pip
